/*public class Series extends Media{
}
*/